- Show view number inside the window and not in the window title
- Added pass count to breakpoints (a breakpoint that is triggered when the condition is hit a certain times)
- Improved edit breakpoint window
- Added option to enable/disable all breakpoints
- Fixed moving cursor up when address near 0

Improve maximum sent keys to ZENG/ZENG Online
Improve Memory Cheat: allow to set low address, can delete watches
Improved Windows timing and any other system using SDL video driver. Now uses SDL Timing
Improved Mac timing by using native timer
Improved Watermark Logo: can be shown only when loading/saving, can change colors when loading/saving
Improved File Selector: allow to use path to a FAT mounted image on all cases
Improved Visual Cassette Tape window: support standard tape too
Improved Custom rom setting adding a Reset machine option
Improved DivMMC, DivIDE and ZXMMC emulation: allow to enable them even if no MMC/SD card or IDE inserted
Improved View Basic window: allow lines > 9999, useful for protected programs

* Fixes:

Fixed semaphore locking on Windows
Fixed cpu usage calculation when footer is disabled
Fixed setting esxdos handler root dir when loading a .nex file without path from command line
Fixed bug restoring ZSF snapshot with DivIDE enabled
Fixed segfault when pressing CTRL-C on console
Fixed PCW palette colour changes
Fixed Chloe keyboard: allow fast text writing
Fixed toggle breakpoint on a position that already had a breakpoint when breakpoints were disabled
Fixed smartloading a tape file when a dsk is inserted
Fixed visual casette tape when inserting an unsupported tape
Fixed write protect tab on visual hilow datadrive window

----


ZEsarUX 12 - Bubble Bobble edition. 16 January 2025

* New things added:

Added ZX Microdrive emulation on ZX Spectrum: that includes:
- Standard MDR emulation. Allow to browse inside MDR files, see file map, fragmentation, rename files, sectors info, chkdsk and emulate bad sectors